# llamalake

./: Makefile  README.md  buf.gen.yaml  buf.md  buf.yaml  logging.yaml  meltano.yml  package.json  pyproject.toml  slides.md
fmelty/: dependencies.py  main.py  settings.py
fmelty/routers/: runs.py
gr/: main.py  run_pb2.py  run_pb2_grpc.py
gr/meltapi/v1/: run_pb2.py  run_pb2.pyi  run_pb2_grpc.py
gr/proto/gr/v1/: run_pb2.py  run_pb2.pyi  run_pb2_grpc.py
meltapi/: buf.yaml
meltapi/v1/: run.proto
proto/: run.proto
src/client/: index.ts
src/client/models/: Job.ts  SubmitRequest.ts  SubmitResponse.ts
src/client/services/: DefaultService.ts  JustATestService.ts  RunService.ts
tests/: test_grpc_run.py
